--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,17 @@
 server.port=9096
 spring.aplication.name=cadastro
 
-spring.datasource.url=jdbc:mysql://localhost:3306/cadastro
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.url=jdbc:h2:mem:cadastro
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.initialization-mode=always
+
 #spring.jpa.show-sql=true
 
 logging.level.org.hibernate.SQL=DEBUG
