mudancas para sonar

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,4 @@ spring.datasource.initialization-mode=always
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
+#mvn sonar:sonar -Dsonar.host.url=http://localhost:9000  -Dsonar.login=0c2fffe0b009e12a6937e9e70c9cde3e02b30bb1
